--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
                         <img src="public/images/snap-sercle.png" class="p-image shadow-lg">
                         </a>
                         
+                        <a data-toggle="modal" data-target="#ux-m3" class="project-image btn" id="ux-3">
+                        <img src="public/images/cubit-snap.png" class="p-image shadow-lg">
+                        </a>
+
                         <a data-toggle="modal" data-target="#ux-m2" class="project-image btn" id="ux-2">
                         <img src="public/images/snap-mitea-1.png" class="p-image shadow-lg">
-                        </a>
-                        
-                        <a data-toggle="modal" data-target="#ux-m3" class="project-image btn" id="ux-3">
-                        <img src="public/images/cubit.png" class="p-image shadow-lg">
                         </a>
 
                     </div>
@@ -250,6 +250,24 @@
                         </a>
                     </div>
                 </div>
+
+                                <div class="ID">
+                    <h3>Other works</h3>
+                    <div class="project row" id="project-ot">
+                        <a data-toggle="modal" data-target="#ot-m1" class="project-image btn" id="ot-1">
+                        <img src="public/images/snap-1.png" class="p-image shadow-lg">
+                        </a>
+
+                        <a data-toggle="modal" data-target="#ot-m2" class="project-image btn" id="ot-2">
+                        <img src="public/images/snap-2.png" class="p-image shadow-lg">
+                        </a>
+
+                        <a data-toggle="modal" data-target="#ot-m3" class="project-image btn" id="ot-3">
+                        <img src="public/images/snap-3.png" class="p-image shadow-lg">
+                        </a>
+                    </div>
+                </div>
+
                 <!-- End .project -->
 <!--                 <div class="PG"> -->
                     <!-- <h3>Programming</h3> -->
@@ -384,8 +402,63 @@
         </div>
     </div>
 
+        <!-- OTHER MODAL -->
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m1">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-12 modal-title text-center"><strong>USER FLOW</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/Jimmy-Chen-Portfolio-21.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m2">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-12 modal-title text-center"><strong>LO-FI WIREFRAME</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/Jimmy-Chen-Portfolio-22.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m3">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-12 modal-title text-center"><strong>SITEMAP</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/Jimmy-Chen-Portfolio-23.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
     <!-- PG MODAL -->
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m1">
+<!--     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m1">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -437,7 +510,7 @@
                 </div>
             </div>      
         </div>
-    </div>
+    </div> -->
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
