--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@
     <!-- End #projects -->
 
     <!-- UX MODAL -->
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m1">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m1">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>UX & UI DESIGN</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>UX & UI DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -311,11 +311,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m2">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m2">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL & UX DESIGN</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>INDUSTRIAL & UX DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -329,11 +329,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m3">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ux-m3">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL & UX/UI Design</strong> </h5>
+                    <h5 class="col-11 modal-title text-center"><strong>INDUSTRIAL & UX/UI Design</strong> </h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -348,11 +348,11 @@
     </div>
 
     <!-- ID MODAL -->
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m1">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m1">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>INDUSTRIAL DESIGN</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>INDUSTRIAL DESIGN</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -366,11 +366,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m2">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m2">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>PROGRAMMING</strong></br>Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/> Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/>Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-api">Back End</a></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>PROGRAMMING</strong></br>Testing Page:<a href="https://mi-tea.herokuapp.com">Mi-TEA</a> <strong>USER:</strong>jimmychen.xin@gmail.com <strong>PASSWORD:</strong>jimmy000 <br/> Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-client">Front End</a><br/>Go to Github Repo: <a href="https://github.com/jimtie/mi-tea-api">Back End</a></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -384,11 +384,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m3">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="id-m3">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>PROGRAMMING</strong><br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
+                    <h5 class="col-11 modal-title text-center"><strong>PROGRAMMING</strong><br/>Go to Github Repo: <a href="https://github.com/jimtie/Toyslist">Toyslist</a><br/>Test by <strong>EMAIL:</strong> bob@gmail.com <strong>ZIPCODE:</strong> 94111 or 94222</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -403,11 +403,11 @@
     </div>
 
         <!-- OTHER MODAL -->
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m1">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m1">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>USER FLOW</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>USER FLOW</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -421,11 +421,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m2">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m2">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>LO-FI WIREFRAME</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>LO-FI WIREFRAME</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
@@ -439,11 +439,11 @@
         </div>
     </div>
 
-    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m3">
-        <div class="modal-dialog modal-lg" role="document">
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m3">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="col-12 modal-title text-center"><strong>SITEMAP</strong></h5>
+                    <h5 class="col-11 modal-title text-center"><strong>SITEMAP</strong></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
