--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Jimmy Chen</h1>
             <h2>Full Stack / UX / Industrial Designer</h2>
-            <p><a href="public/images/Jimmy-Chen-Resume.pdf" class="btn-rounded-white" download>Download Resume</a></p>
+            <p><a href="public/images/Jimmy-Chen-Resume-Update.pdf" class="btn-rounded-white" download>Download Resume</a></p>
             <!-- <p><a href="public/images/陈炘-中文简历-网页.pdf" class="btn-rounded-white" download>下载中文简历</a></p> -->
         </div>
         <!-- End #lead-content -->
@@ -90,23 +90,19 @@
         <div id="experience-timeline">
             <div data-date="May 2017 – CURRENT">
                 <h3>Qfusion Labs, Inc</h3></br>
-                <a href="http://www.cubit.cc">www.cubit.cc</a>
+                <h5>(Oakland,CA,USA)</h5><a href="http://www.cubit.cc">www.cubit.cc</a>
                 <h4>Design Lead</h4>
                 <p>
-                    The product has been sold to 13 states over 50 schools in the US, and used by NASA for teaching and training purposes. 
-                    <a href="https://www.jpl.nasa.gov/edu/teach/activity/heat-flow-programming-challenge/">https://www.jpl.nasa.gov/edu/teach/activity/heat-flow-programming-challenge/</a>
                 <ul>
-                    <li>Created about detailed PRD (Product Requirement Document) for both hardware and software developing.
+                    <li>Analyzed the market and re-defined the target users from engineers to students from the research result. Formed Cubit as a STEM/ STEAM educational product. It has been sold to more than 13 states over 50 schools in the US, pilot schools in Australia, England and China as well, and also used by NASA for teaching and training purpose. <a href="https://www.jpl.nasa.gov/edu/teach/activity/heat-flow-programming-challenge/">(https://www.jpl.nasa.gov/edu/teach/activity/heat-flow-programming-challenge/)</a>
                     </li>
-                    <li>Collaborated with clients and creative teams to develop professional and effective packaging for products.
+                    <li>Created detailed PRD (Product Requirement Document) for both hardware and software development, including Physical Requirements, Functional Requirements, Performance Requirements, Interface Requirements, Ergonomics Requirements, etc..
                     </li>
-                    <li>Conducted brainstorming sessions and designed concepts in line with client's requirements.
+                    <li>Hosted 10-15 minutes Design team meet ups 2-3 times per week, assigned works to teammates and sync progress.
                     </li>
-                    <li>In charge of Manufacturing in China, efficiently schedule time for components purchasing, PCB boards printing, PCB assembly, enclosure injection molding, testing, product assembly, packaging and shipping. Followed up all the process and make sure the process done in a month.
+                    <li>Conducted brainstorming sessions and designed concepts in line with client's requirements. Tested new projects with school students and collected their feedbacks for improvement and inspiration.
                     </li>
-                    <li>Worked closely with software engineers to figure out the better solution based on AB testing result
-                    </li>
-                    <li>Worked directly with clients and met them on site to discuss functionalities and design details
+                    <li>In charge of Manufacturing in China. Efficiently scheduled time for components purchasing, PCB boards printing, PCB assembly, enclosure injection molding, testing, product assembly, packaging and shipping. Followed up all the process and make sure the whole process done within a month.
                     </li>
                 </ul>
                 </p>
@@ -114,29 +110,40 @@
 
             <div data-date="May 2015 – Apr 2017">
                 <h3>Sercle, Inc</h3>
-                <h4>Chief UI/UX designer</h4>
+                <h5>(Fremont,CA,USA)</h5>
+                <h4>Chief UI/UX Designer</h4>
                 <p>
-                    The App successfully got seed funding from Hesong Tang, the previous Vice President of Baidu/ the previous Director of Strategic Investment of Great China Region of Microsoft.
                 <ul>
-                    <li>Designed mobile app UX and UI from scratch, allowed users to search and acquire local service providers, at the same time, they can update their profile and provide services. It’s a decentralized application</li>
-                    <li>Applied knowledge of design software to create eye-catching creative concepts. For example, allows users to switch their status between buyers and sellers within one single app</li>
-                    <li>Participated in the business execution, used research data to set up business strategy and design as well</li>
-                    <li>Led the team to update the flow chart, wireframes and graphics</li>
-                    <li>Created concepts, performance, and production criteria</li>
-                    <li>Tested product designs using models, prototypes, specialist computer software and computer-aided design</li>
+                    <li>Designed mobile app UX and UI from scratch. The prototype helped the company successfully raised over $1.2Million seed fund and the total downloads of the App is over 118K.</li>
+                    <li>Participated in the business execution, used research data to set up business strategy and guide the design.</li>
+                    <li>Discussed with CEO, product manager and engineer lead to update the flow chart, wireframes and graphics. Applied agile development method, each iteration takes about 1.5-2 month.</li>
+                    <li>Used Axure for Site Map, user flow and wire frames, Adobe photoshop to create UI and Marvel POP for prototypes. Did AB testing with users, observed, asked questions and made videos for later analysis. Found it's better to design the appointment page for one-hand-use, because they usually check it when working or driving.</li>
                 </ul>
                 </p>
             </div>
 
-            <div data-date="Oct 2013 – May 2015">
+            <div data-date="Jun 2014 – Aug 2015">
+                <h3>Big Timers, Inc</h3>
+                <h5>(San Francisco,CA,USA)</h5>
+                <h4>UI/UX Designer</h4>
+                <p>
+                <ul>
+                    <li>Improved user-centered App design</li>
+                    <li>Discussed about the user-flows and site map with team lead</li>
+                    <li>Created wireframes and prototype for user testing</li>
+                </ul>
+                </p>
+            </div>
+
+            <div data-date="Oct 2013 – May 2014">
                 <h3>Shook-Design Studio</h3>
+                <h5>(Palo Alto,CA,USA)</h5>
                 <h4>Industrial Designer</h4>
                 <p>The main projects I participated: 
                     </br>   - Lotus Elise bumper redesign
                     </br>   - Smart motorcycle design for Zebra Motors, Denmark
                     </br>   - Salt Flats Racing car design 
                     </br>   - General Motors Concept car Interior UI design
-                    </br>   - Google campus landscape design
                     </br>   - Wearable smart device design
                 <ul>
                     <li>Evaluates design ideas based on factors such as appealing appearance, design-function relationship</li>
@@ -144,7 +151,31 @@
                     <li>Presents design to clients and discusses need for modification and change</li>
                     <li>Applied knowledge of design software to create eye-catching creative concepts</li>
                     <li>Ensured that designs meet the specific branding requirements and corporate standards</li> 
-                    Negotiating/agreeing contracts with manufacturers on production of packaging, budgets, time scales and graphics for advertising</li>
+                    <li>Negotiating/agreeing contracts with manufacturers on production of packaging, budgets, time scales and graphics for advertising</li>
+                </ul>
+                </p>
+            </div>
+
+            <div data-date="Oct 2012 – Oct 2013">
+                <h3>Samai Foods Co</h3>
+                <h5>(Canada,Remote)</h5>
+                <h4>Package Designer</h4>
+                <p>
+                <ul>
+                    <li>Designed the packaging method as well as the graphics with Photoshop. The product is selling in Chinese Market.</li>
+                    <li>Did research about package materials and compare the manufacturing cost, and quotes from factories. Built relationship with 2 Chinese package manufacturers.</li>
+                </ul>
+                </p>
+            </div>
+
+            <div data-date="Jul 2009 – Jun 2010">
+                <h3>New Era Architecture Design Co</h3>
+                <h5>(Beijing,China)</h5>
+                <h4>Interior/Furniture Designer</h4>
+                <p>
+                <ul>
+                    <li>Participated projects and brainstormed ideas</li>
+                    <li>Did CAD modeling work by using Rhino and Sketch Up</li>
                 </ul>
                 </p>
             </div>
