--- a/index.html
+++ b/index.html
@@ -87,8 +87,14 @@
                         </div>
 
                         <div class="project-image">
-                        <a data-toggle="modal" data-target="#id-m2" class="btn" id="id-2">
+                        <a data-toggle="modal" data-target="#ux-m2" class="btn" id="ux-2">
                         <img src="public/images/pi-mitea.png" class="p-image shadow-lg">
+                        </a>
+                        </div>
+
+                        <div class="project-image">
+                        <a data-toggle="modal" data-target="#id-m1" class="btn" id="id-1">
+                        <img src="public/images/pi-easycorrect.png" class="p-image shadow-lg">
                         </a>
                         </div>
 
