--- a/index.html
+++ b/index.html
@@ -340,6 +340,61 @@
         </div>
     </div>
 
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m4">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-11 modal-title text-center"><strong>RESPONSIVE UI</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/Jimmy-Chen-Portfolio-24.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m5">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-11 modal-title text-center"><strong>DIGITAL DRAWING</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/Jimmy-Chen-Portfolio-15.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="ot-m6">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="col-11 modal-title text-center"><strong>CONSTRUCTION DRAFTING</strong></h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mb-0 p-0">
+                    <div class="embed-responsive z-depth-1-half">
+                      <img src="./public/images/construction.jpg" style="width: 100%">
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+
     <!-- PG MODAL -->
 <!--     <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel" aria-hidden="true" id="pg-m1">
         <div class="modal-dialog modal-lg" role="document">
@@ -418,30 +473,30 @@
                         </a>
                     </div>
                     <div class="carousel-item col-md-3">
-                        <!-- <a data-toggle="modal" data-target="#ot-m4" class="project-image btn" id="ot-4"> -->
-                        <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=4" alt="slide 4">
-                        <!-- </a> -->
+                        <a data-toggle="modal" data-target="#ot-m4" class="project-image btn" id="ot-4">
+                        <img class="img-fluid mx-auto d-block" src="./public/images/Jimmy-Chen-Portfolio-24.jpg" alt="slide 4">
+                        </a>
                     </div>
                     <div class="carousel-item col-md-3">
-                        <!-- <a data-toggle="modal" data-target="#ot-m5" class="project-image btn" id="ot-5"> -->
-                        <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=5" alt="slide 5">
-                        <!-- </a> -->
+                        <a data-toggle="modal" data-target="#ot-m5" class="project-image btn" id="ot-5">
+                        <img class="img-fluid mx-auto d-block" src="./public/images/Jimmy-Chen-Portfolio-15.jpg" alt="slide 5">
+                        </a>
                     </div>
                     <div class="carousel-item col-md-3">
-                        <!-- <a data-toggle="modal" data-target="#ot-m6" class="project-image btn" id="ot-6"> -->
-                        <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=6" alt="slide 6">
-                        <!-- </a> -->
+                        <a data-toggle="modal" data-target="#ot-m6" class="project-image btn" id="ot-6">
+                        <img class="img-fluid mx-auto d-block" src="./public/images/construction-tag.jpg" alt="slide 6">
+                        </a>
+                    </div>
+<!--                     <div class="carousel-item col-md-3">
+                        <a data-toggle="modal" data-target="#ot-m7" class="project-image btn" id="ot-7">
+                        <img class="img-fluid mx-auto d-block" src="./public/images/construction-tag.jpg" alt="slide 7">
+                        </a>
                     </div>
                     <div class="carousel-item col-md-3">
-                        <!-- <a data-toggle="modal" data-target="#ot-m7" class="project-image btn" id="ot-7"> -->
-                        <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=7" alt="slide 7">
-                        <!-- </a> -->
-                    </div>
-                    <div class="carousel-item col-md-3">
-                        <!-- <a data-toggle="modal" data-target="#ot-m8" class="project-image btn" id="ot-8"> -->
+                        <a data-toggle="modal" data-target="#ot-m8" class="project-image btn" id="ot-8">
                         <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=8" alt="slide 8">
-                        <!-- </a> -->
-                    </div>
+                        </a>
+                    </div> -->
                 </div>
                 <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
                     <i class="fa fa-chevron-left fa-lg text-muted"></i>
