--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="modal-body mb-0 p-0">
                     <div class="embed-responsive z-depth-1-half">
-                      <img src="./public/images/cubit.jpg" style="width: 100%">
+                      <img src="./public/images/ccubit.jpg" style="width: 100%">
                     </div>
                 </div>
             </div>      
