--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
                     <!-- <h3>UI/UX design</h3> -->
 <!--                     <div class="project row" id="project-ux"> -->
                         <div class="project-image">
+                        <a href="https://developer.fiserv.com" target="_blank" rel="noopener noreferrer" class="btn" id="ux-0">
+                        <img src="public/images/pi-sercle.png" class="p-image shadow-lg">
+                        </a>
+                        </div>
+
+                        <div class="project-image">
                         <a data-toggle="modal" data-target="#ux-m1" class="btn" id="ux-1">
                         <img src="public/images/pi-sercle.png" class="p-image shadow-lg">
                         </a>
