hide other works

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
     </div> -->
 
-    <div id="otherworks">
+<!--    <div id="otherworks">
         <h2 class="heading">Other Works</h2>
         
         <div class="container-fluid">
@@ -494,7 +494,7 @@
                         <img class="img-fluid mx-auto d-block" src="./public/images/construction-tag.jpg" alt="slide 6">
                         </a>
                     </div>
-<!--                     <div class="carousel-item col-md-3">
+                     <div class="carousel-item col-md-3">
                         <a data-toggle="modal" data-target="#ot-m7" class="project-image btn" id="ot-7">
                         <img class="img-fluid mx-auto d-block" src="./public/images/construction-tag.jpg" alt="slide 7">
                         </a>
@@ -503,7 +503,7 @@
                         <a data-toggle="modal" data-target="#ot-m8" class="project-image btn" id="ot-8">
                         <img class="img-fluid mx-auto d-block" src="//placehold.it/600x400?text=8" alt="slide 8">
                         </a>
-                    </div> -->
+                    </div> 
                 </div>
                 <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
                     <i class="fa fa-chevron-left fa-lg text-muted"></i>
@@ -516,7 +516,7 @@
             </div>
         </div>
 
-    </div>
+    </div>  -->
     <!-- End #skills -->
 
     <div id="contact">
