--- a/about.html
+++ b/about.html
@@ -191,7 +191,7 @@
     <div id="education">
         <h2 class="heading">Education</h2>
 
-        <div class="education-block">
+<!--        <div class="education-block">
             <h3>General Assembly</h3>
             <span class="education-date">Feb 2020 - May 2020</span>
             <h4>Software Engineer Immersive</h4>
